# Telegram-bot-for-invitations

./: .gitignore  alembic.ini  pyproject.toml
bot/: main.py
bot/alembic/: env.py
bot/alembic/versions/: 2024_07_10_1358-c0d642d38585_create_tables_users_profiles_events_.py  2024_07_10_1409-db891aa9536b_add_relationship_between_profile_record.py
bot/core/: config.py  db_helper.py  requests.py  utils.py
bot/core/fsm_machine/: fsm_condition.py  fsm_register.py
bot/core/models/: __init__.py  event.py  profile_user.py  record_event.py  user.py
bot/core/schemas/: profile_user.py
bot/handlers/: commands.py  handlers_main_manu.py  hendlers_register_profile.py
bot/keyboards/: inline_keyboard.py  main_keyboard.py
